[package]
name = "nft_floor_price_api"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
mongodb = "2.1.0"
reqwest =  { version = "0.11.9", features = ["json"] }
actix-web = "4.0.1"
actix-cors = "0.6.1"
serde_json = "1.0.79"
futures = "0.3.21"
bson = { version = "2.1.0", features = ["chrono-0_4"] } 
chrono = "0.4.19"
redis =  { version = "0.21.5", features = ["tokio-comp"] } 
tokio-cron-scheduler = "0.5.0"
dotenv = "0.15.0"

